2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	* plugins/dtc_reader/dtc_reader.py:
	* scripts/elm_sim.py:
	    fix decode_dtc_code and move it to sensor.py


2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* garmon/obd_device.py:
	* garmon/sensor.py:
	* plugins/Makefile.am:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/freeze_frame_data/Makefile.am:
	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* scripts/elm_sim.py:
	    First work on the Freeze Frame Data plugin
	    

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.py:
	    fix _notify_units_cb to update all views
	    

2008-09-08  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	    Bump version to 0.2.0


2008-09-08  Ben Van Mechelen  <me@benvm.be>

	* TODO.tasks:
	* plugins/Makefile.am:
	* plugins/sensor_list/Makefile.am:
	* plugins/sensor_list/sensor_list.py:
	    Removed the sensor_list plugin


2008-09-05  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	* data/garmon.schemas:
	    Added all present gconf keys to the schema file
	    

2008-09-05  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* plugins/dtc_clearer/dtc_clearer.py:
        Fixed clear_dtc to use the async approach
        

2008-06-05  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	    Set the baudrate of the device correctly
	

2008-06-04  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.py:
	    remove some print statements
	    obd designation is now a oneshot view
	

2008-06-04  Ben Van Mechelen  <me@benvm.be>

	* data/prefs.glade:
	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/prefs.py:
	* garmon/scheduler.py:
    * scripts/elm_sim.py:
	    Try to increase speed
	       -Add a baudrate preference.
	       -Try to increase baudrate after connection (needs investigation)
           -Add a refresh rate label to the statusbar

