@@ -313,7 +313,7 @@ class ELMDevice(OBDDevice, PropertyObject):
     
     def _read_supported_pids(self, freeze_frame=False):
         def success_cb(cmd, data, args):
-            pids = []
+            self._supported_pids = []
             data = decode_result(data)
             for item in data:
                 bitstr = sensor.hex_to_bitstr(item)
@@ -324,15 +324,28 @@ class ELMDevice(OBDDevice, PropertyObject):
                             pid_str = '010' + hex(pid)[2:]                    
                         else:
                             pid_str = '01' + hex(pid)[2:]
-                        pids.append(pid_str.upper())  
+                        self._supported_pids.append(pid_str.upper())  
                           
-            if freeze_frame:
-                self._supported_freeze_frame_pids = pids
-            else:
-                self._supported_pids = pids
-                self._connected = True
-                print 'supported pids: %s' % self._supported_pids
-                self.emit('connected', True)
+            self._connected = True
+            print 'supported pids: %s' % self._supported_pids
+            self.emit('connected', True)
+
+
+        def ff_success_cb(cmd, data, args):
+            self._supported_freeze_frame_pids = []
+            data = decode_result(data)
+            for item in data:
+                bitstr = sensor.hex_to_bitstr(item)
+                for i in range(0, len(bitstr)):
+                    if bitstr[i] == "1":
+                        pid = i + 1
+                        if pid < 16: 
+                            pid_str = '020' + hex(pid)[2:]                    
+                        else:
+                            pid_str = '02' + hex(pid)[2:]
+                        self._supported_freeze_frame_pids.append(pid_str.upper())  
+                        
+            print 'supported freeze frame pids: %s' % self._supported_freeze_frame_pids
 
         def error_cb(cmd, msg, args):
             debug('error reading supported pids, msg is: %s' % msg)
@@ -340,7 +353,7 @@ class ELMDevice(OBDDevice, PropertyObject):
                                _('could not read supported pids\n\n' + msg))        
         
         if freeze_frame:
-            self._send_command('0200', success_cb, error_cb)        
+            self._send_command('0200', ff_success_cb, error_cb)        
         else:
             self._send_command('0100', success_cb, error_cb)
         
@@ -459,7 +472,8 @@ class ELMDevice(OBDDevice, PropertyObject):
     
     
     def read_pid_data(self, pid, ret_cb, err_cb, *args):
-        if not pid in self._supported_pids:
+        if not pid in self._supported_pids and \
+           not pid in self._supported_freeze_frame_pids:
             raise ValueError, 'pid %s is not supported' % pid
         
         def success_cb(cmd, res, args):
@@ -497,8 +511,8 @@ class ELMDevice(OBDDevice, PropertyObject):
             self.read_device_data(command, ret_cb, err_cb, args)
         elif command[:2] == '01' and command in self._supported_pids:
             self.read_pid_data(command, ret_cb, err_cb, args)
-        elif command[:2] == '02' and command in self._supported_ff_pids:
-            raise NotImplementedError, 'Freeze frame data is currently not supported'
+        elif command[:2] == '02' and command in self._supported_freeze_frame_pids:
+            self.read_pid_data(command, ret_cb, err_cb, args)
         else:
             raise NotImplementedError, 'This command is currently not supported'
     
