@@ -59,41 +59,41 @@ commands = {'atz' : 'ELM327 v1.2',
             '011D' : '41 1D 45',
             '011E' : '41 1E 80',
             '011F' : '41 1F 45 78',
-            '03' : '43 01 00 01 01 00 00',
+            '03' : '43 07 04 06 34 05 23',
             '04' : '44',
-            '0200' : '41 00 FFFFFFFF',
-            '0220' : '41 00 00000000',
-            '0201' : '41 01 82 07 65 04',
-            '0202' : '41 02 00 00',
-            '0203' : '41 03 02 04',
-            '0204' : '41 04 99',
-            '0205' : '41 05 88',
-            '0206' : '41 06 99',
-            '0207' : '41 07 88',
-            '0208' : '41 08 AA',
-            '0209' : '41 09 AB',
-            '020A' : '41 0A 56',
-            '020B' : '41 0B 50',
-            '020C' : '41 0C 55 44',
-            '020D' : '41 0D 78',
-            '020E' : '41 0E 70',
-            '020F' : '41 0F 36',
-            '0210' : '41 10 75 A6',
-            '0211' : '41 11 26',
-            '0212' : '41 12 01',
-            '0213' : '41 13 88',
-            '0214' : '41 14 55 66',
-            '0215' : '41 15 55 66',
-            '0216' : '41 16 55 66',
-            '0217' : '41 17 55 66',
-            '0218' : '41 18 55 66',
-            '0219' : '41 19 55 66',
-            '021A' : '41 1A 55 66',
-            '021B' : '41 1B 55 66',
-            '021C' : '41 1C 06',
-            '021D' : '41 1D 45',
-            '021E' : '41 1E 80',
-            '021F' : '41 1F 45 78',
+            '0200' : '42 00 FFFFFFFF',
+            '0220' : '42 00 00000000',
+            '0201' : '42 01 82 07 65 04',
+            '0202' : '42 02 01 67',
+            '0203' : '42 03 02 04',
+            '0204' : '42 04 99',
+            '0205' : '42 05 88',
+            '0206' : '42 06 99',
+            '0207' : '42 07 88',
+            '0208' : '42 08 AA',
+            '0209' : '42 09 AB',
+            '020A' : '42 0A 56',
+            '020B' : '42 0B 50',
+            '020C' : '42 0C 55 44',
+            '020D' : '42 0D 78',
+            '020E' : '42 0E 70',
+            '020F' : '42 0F 36',
+            '0210' : '42 10 75 A6',
+            '0211' : '42 11 26',
+            '0212' : '42 12 01',
+            '0213' : '42 13 88',
+            '0214' : '42 14 55 66',
+            '0215' : '42 15 55 66',
+            '0216' : '42 16 55 66',
+            '0217' : '42 17 55 66',
+            '0218' : '42 18 55 66',
+            '0219' : '42 19 55 66',
+            '021A' : '42 1A 55 66',
+            '021B' : '42 1B 55 66',
+            '021C' : '42 1C 06',
+            '021D' : '42 1D 45',
+            '021E' : '42 1E 80',
+            '021F' : '42 1F 45 78',
                         
                      }
                       
@@ -134,7 +134,7 @@ alternate_commands = {'atz' : 'ELM327 v1.2',
             '011D' : '41 1D 23',
             '011E' : '41 1E 80',
             '011F' : '41 1F 34 56',
-            '03' : '43 01 00 01 01 00 00',
+            '03' : '43 05 35 03 23 03 34',
             '04' : '44',
                         
                      }                  
